Seller APi updated for UI